Add code for first implementation

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -87,3 +87,9 @@ services:
     volumes:
       - ./game-challenge/hidden:/app
       - /app/node_modules
+
+  game-challenge-tracker:
+    build:
+      dockerfile: Dockerfile.development
+    volumes:
+        - ./game-challenge-tracker:/app
