--- a/game-challenge-tracker/Dockerfile.development
+++ b/game-challenge-tracker/Dockerfile.development
@@ -9,8 +9,5 @@ COPY package.json /app/package.json
 COPY package-lock.json /app/package-lock.json
 RUN npm install
 
-COPY src /app/src
-RUN npm run build
-
 # start app
-CMD ["npm", "start"]
+CMD ["npm", "run", "watch"]
