--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -78,7 +78,15 @@ http {
       server game-challenge-hidden:80;
     }
 
+    upstream docker-game-challenge-tracker {
+      server game-challenge-tracker:3000;
+    }
+
     include /etc/nginx/conf.d/*.conf;
+
+    server {
+      
+    }
 
     include /etc/nginx/sites-enabled/*;
 }
