--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -25,6 +25,7 @@ services:
       ASSET_SERVER_URI: https://asset-server.${HOST}
       CONTENT_SERVER_URI: https://content-server.${HOST}
       STATIC_SERVER_URI: https://static.${HOST}
+      TRACKER_SERVER_URI: https://tracker.${HOST}
       PORT: 443
     depends_on:
       - content-server
