Add basic auth to cms services

--- a/nginx/sites-available/development/asset-server.eppsa.de.conf
+++ b/nginx/sites-available/development/asset-server.eppsa.de.conf
@@ -5,6 +5,19 @@ server {
   server_name ~^asset-server\.(.+\.|)eppsa.de$;
 
   location / {
+    if ($request_method = OPTIONS ) {
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "POST, GET, PUT, OPTIONS, PROPFIND, MKCOL";
+        add_header Access-Control-Allow-Headers "Origin, Authorization, Accept, Content-Type, Depth";
+        add_header Access-Control-Allow-Credentials true;
+        return 200;
+    }
+
+    limit_except GET OPTIONS {
+      auth_basic "credentials required";
+      auth_basic_user_file /etc/nginx/.htpasswd;
+    }
+
     proxy_pass http://docker-asset-server;
   }
 }
