--- a/nginx/sites-available/development/content-server.eppsa.de.conf
+++ b/nginx/sites-available/development/content-server.eppsa.de.conf
@@ -4,7 +4,12 @@ server {
 
   server_name ~^content-server\.(.+\.|)eppsa.de$;
 
-  location / {
+  location / {    
+    limit_except GET OPTIONS {
+      auth_basic "credentials required";
+      auth_basic_user_file /etc/nginx/.htpasswd;
+    }
+
     proxy_pass http://docker-content-server;
   }
 }
