--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -5,6 +5,9 @@ server {
   server_name ~^cms\.(.+\.|)eppsa.de$;
 
   location / {
+    auth_basic "credentials required";
+    auth_basic_user_file /etc/nginx/.htpasswd;
+
     proxy_pass http://docker-cms-frontend;
   }
 
