--- a/nginx/Dockerfile.production
+++ b/nginx/Dockerfile.production
@@ -1,6 +1,8 @@
 FROM nginx:1.12.2
 
 ARG environment
+ARG BASIC_AUTH_USER
+ARG BASIC_AUTH_PASSWORD
 
 RUN rm /etc/nginx/conf.d/default.conf
 RUN rm /etc/nginx/nginx.conf
@@ -10,6 +12,9 @@ COPY conf.d /etc/nginx/conf.d
 COPY sites-available/${environment}/* /etc/nginx/sites-available/
 COPY sites-available/*.conf /etc/nginx/sites-available/
 COPY config /etc/nginx/config
+
+RUN apt-get update && apt-get install -y apache2-utils
+RUN htpasswd -bc /etc/nginx/.htpasswd $BASIC_AUTH_USER $BASIC_AUTH_PASSWORD
 
 RUN mkdir /etc/nginx/sites-enabled
 RUN ln -s /etc/nginx/sites-available/* /etc/nginx/sites-enabled/
