--- a/game-challenge-tracker/Dockerfile.production
+++ b/game-challenge-tracker/Dockerfile.production
@@ -10,6 +10,7 @@ COPY package-lock.json /app/package-lock.json
 RUN npm install
 
 COPY src /app/src
+COPY tsconfig.json /app/tsconfig.json
 RUN npm run build
 
 # start app
