--- a/nginx/sites-available/production/content-server.eppsa.de.conf
+++ b/nginx/sites-available/production/content-server.eppsa.de.conf
@@ -4,6 +4,11 @@ server {
   server_name ~^content-server\.(.+\.|)eppsa.de$;
 
   location / {
+    limit_except GET OPTIONS {
+      auth_basic "credentials required";
+      auth_basic_user_file /etc/nginx/.htpasswd;
+    }
+
     proxy_pass http://docker-content-server;
   }
 }
