Add add Cache-Control header to game-client site

--- a/nginx/sites-available/production/game.eppsa.de.conf
+++ b/nginx/sites-available/production/game.eppsa.de.conf
@@ -8,5 +8,6 @@ server {
   location / {
     index index.html;
     add_header Access-Control-Allow-Origin *;
+    add_header Cache-Control proxy-revalidate, max-age=3600;
   }
 }
