Fix nginx config

--- a/nginx/sites-available/production/game.eppsa.de.conf
+++ b/nginx/sites-available/production/game.eppsa.de.conf
@@ -8,6 +8,7 @@ server {
   location / {
     index index.html;
     add_header Access-Control-Allow-Origin *;
-    add_header Cache-Control proxy-revalidate, max-age=3600;
+    add_header Cache-Control proxy-revalidate;
+    add_header Cache-Control max-age=3600;
   }
 }
