--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -35,6 +35,7 @@ services:
       - game-challenge-sorting
     volumes:
       - ./game-client:/app
+      - /app/node_modules
 
   game-challenge-sorting:
     build:
